--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,14 @@ body {
 #title {
     color: #ffffff;
     font-weight: 500;
-    margin-bottom: 10px;
+    margin-bottom: 2px;
+    margin-top: 2px;
 }
 
 img {
     width: 30%;
     height: 100px;
+    margin-bottom: 20px;
 }
 
 #password_container {
@@ -75,6 +77,11 @@ img {
 .item {
     display: flex;
     gap: 14px;
+    font-size: 18px;
+}
+
+.item input {
+    font-size: 14px;
 }
 
 #size {
@@ -83,7 +90,7 @@ img {
     text-align: center;
     border: none;
     border-radius: 4px;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
 }
 
 #size::-webkit-inner-spin-button,
@@ -106,7 +113,7 @@ img {
 #generate {
     background-color: #ffffff;
     border: none;
-    margin-top: 12px;
+    margin-top: 20px;
     padding: 10px 0px;
     border-radius: 4px;
     color: #797979;
@@ -126,7 +133,7 @@ img {
 #copy {
     background-color: #ffffff;
     border: none;
-    margin-top: 12px;
+    margin-top: 20px;
     padding: 10px 0px;
     border-radius: 4px;
     color: #797979;
